--- a/home/css/bootstrap.css
+++ b/home/css/bootstrap.css
@@ -55,7 +55,8 @@ abbr[title] {
 }
 b,
 strong {
-  font-weight: bold;
+	font-weight: bold;
+	text-align: center;
 }
 dfn {
   font-style: italic;
@@ -1292,7 +1293,8 @@ h6,
   font-size: 12px;
 }
 p {
-  margin: 0 0 10px;
+	margin: 0 0 10px;
+	font-weight: normal;
 }
 .lead {
   margin-bottom: 20px;
@@ -1956,7 +1958,7 @@ pre code {
 	width: 100%;
   }
   .col-md-4 {
-    width: 33.33333333%;
+	width: 50%;
   }
   .col-md-3 {
     width: 25%;
